app tests updated